--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <div class="main">
+        <div class="p1">Player One</div>
+        <div class="center">
+            <div class="board">
+            </div>
+            <div class="turn">
+            
+            </div>
+            <button class="reset">Reset</button>
+        </div>
+        <div class="p2">Player Two</div>
+    </div>
 </body>
 </html>
